[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.16",
    "concurrent-log-handler>=0.9.25",
    "cryptography>=44.0.2",
    "openai>=1.74.0",
    "python-dotenv>=1.1.0",
    "qiskit>=2.0.0",
    "streamlit>=1.44.1",
    "tenacity>=9.1.2",
]
