[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.16",
    "concurrent-log-handler>=0.9.25",
    "cryptography>=44.0.2",
    "matplotlib>=3.10.1",
    "openai>=1.74.0",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "qiskit>=2.0.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.44.1",
    "tenacity>=9.1.2",
]
